--- a/src/main/webapp/firstday/hellovue.html
+++ b/src/main/webapp/firstday/hellovue.html
@@ -2,19 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>第一个vue程序</title>
     <script src="../lib/vue.js"></script>
 </head>
 <body>
 <div id="app">
     <h1>{{msg}}</h1>
-<script type="text/javascript">
-    var app = new Vue({
-        el:'#app',
-        data:{
-            msg:"hello,Vue123456!!!"
-        }
-    })
-</script>
+    <h1>{{details()}}</h1>
+    <script type="text/javascript">
+        var app = new Vue({
+            el:'#app',//el,element,可以赋值#id或.样式
+            data:{//定义数据
+                msg:"hello,Vue123456!!!"
+            },
+            methods:{//定义方法
+                details:function () {
+                    return "你好啊"
+                }
+            }
+        })
+    </script>
+</div>
 </body>
 </html>
