--- a/src/main/webapp/firstday/vuetemplate.html
+++ b/src/main/webapp/firstday/vuetemplate.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="app">
-        <!--使用插值表达式会在加载数据完成前显示{{msg}}-->
+        <!--使用插值表达式会在加载数据完成前{{msg}}-->
         <div >没使用v-html:{{msg}}</div>
         <!--使用v-html来绑定带有html标签的值-->
         使用v-html:<div v-html="msg"></div>
