--- a/src/main/webapp/firstday/banddemo.html
+++ b/src/main/webapp/firstday/banddemo.html
@@ -8,6 +8,23 @@
 </head>
 <body>
 <div id="app">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">添加品牌</h3>
+        </div>
+        <div class="panel-body form-inline">
+            <label>
+                Id:
+                <input type="text" class="form-control" v-model="id">
+            </label>
+            <label>
+                Name:
+                <input type="text" class="form-control" v-model="name">
+            </label>
+            <input type="button" value="添加" @click="add()">
+            <input type="text" class="form-control" v-model="keyword">
+        </div>
+    </div>
     <table class="table table-bordered table-hover table-striped">
         <thead>
             <tr>
@@ -18,10 +35,13 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>
-
-                </td>
+            <!--  根据输入的值来实现数组的过滤      -->
+            <!-- 在search方法中，执行for循环，生成带有关键字的list，并返回           -->
+            <tr v-for="item in search(keyword)" :key="item.id">
+                <td>{{item.id}}</td>
+                <td>{{item.name}}</td>
+                <td>{{item.ctime}}</td>
+                <td><a href="" @click.prevent="del(item.id)">删除</a></td>
             </tr>
         </tbody>
     </table>
@@ -30,12 +50,44 @@
         var app = new Vue({
             el:'#app',
             data:{
-
+                id:'',
+                name:'',
+                keyword:'',
+                list:[
+                    {id:1,name:'奔驰',ctime:new Date() },
+                    {id:2,name:'宝马',ctime:new Date() },
+                    // {id:2,name:'宝马',ctime:new Date() },
+                    // {id:2,name:'宝马',ctime:new Date() },
+                ]
             },
             methods:{
-
+                add:function () {
+                    this.list.push({id:this.id,name:this.name,ctime:new Date()});
+                    this.id='';
+                    this.name='';
+                },
+                del:function (id) {
+                    var index;
+                    for(var i = 0;i<=this.list.length;i++){
+                        if(id == this.list[i].id){
+                            index = i;
+                            break;
+                        }
+                    }
+                    this.list.splice(index,1);
+                },
+                search:function (keyword) {
+                    var newList=[];
+                    //es6中，对字符串提供了一个新方法，includes(),包含则返回true
+                    this.list.forEach(item => {
+                        if(item.name.indexOf(keyword) != -1){
+                            newList.push(item);
+                        }
+                    });
+                    return newList;
+                }
             }
-        })
+            });
     </script>
 </body>
 </html>
